--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "frontend",
+  "name": "olist-turby-landing-page",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.13.4",
+    "node": "12.16.1"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
